# rocket_sim

./: .gitignore  README.md  TitanSRM Thrust.ods  manim_scenes.py  peg.py  peg_clean_sheet.py  pyproject.toml  requirements.txt  script00.md  titan_3e_centaur.py
cosmographia/: .gitignore  readme.md  spacecraft_vgr1.json  spacecraft_vgr2.json  spice_vgr1.json  spice_vgr2.json  v1_kwan.tm  v2_kwan.tm
data/: .gitignore  Centaur Separation.dig  CentaurSep.csv  CentaurSep.ods  TitanSRM Start.csv  TitanSRM Thrust.csv  TitanSRM Thrust.ods  TitanSRM start curve.dig  TitanSRM thrust curve.dig  UA1205 SRM properties.ods  UA1205 Thrust Curve.csv  UA1205 Thrust Curve.dig  Voyager Launch timeline.ods  gravity_B612.tpc  gravity_EGM2008_J2.tpc  readme.md  vgr1_centaur2_optimal_run.txt  vgr1_pm_optimal_run.txt  vgr2_centaur2_optimal_run.txt  vgr2_pm_optimal_run.txt
data/vgr1/: Voyager1HorizonsCartesian  readme.md  v1_horizons_elements.txt  v1_horizons_elements_1s.txt  v1_horizons_vectors.txt  v1_horizons_vectors_1s.txt
fonts/: .gitignore  README.md
narration/: README.md
products/: .gitignore  readme.md
render/: .gitignore  README.md
soundtrack/: README.md
src/: atlas_centaur.py  gravity_EGM2008_J2.py  j2_vectors.py  manim.cfg  manim_scenes.py  picturebox_scenes.py  poly.py  rocket_sim.py  scene.py  titan_3e_centaur.py  voyager.py  voyager1_centaur2.py  voyager1_depart_target.py  voyager1_pm.py  voyager_depart_target.py
tests/: __init__.py  conftest.py  test_peg.py  test_peg_clean_sheet.py  test_titan_3e_centaur.py
video/: Script00.ipynb  readme.md
youtube/: README.md
(+38 files in other folders)
